<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tvName"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/name"
            android:labelFor="@id/edtName"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.CustomEditText
            android:id="@+id/edtName"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/email"
            android:labelFor="@id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.CustomEditText
            android:id="@+id/edtEmail"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvPassword"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/password"
            android:labelFor="@id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.CustomEditText
            android:id="@+id/edtPassword"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvPasswordConfirmation"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/password_confirmation"
            android:labelFor="@id/edtPasswordConfirmation"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.CustomEditText
            android:id="@+id/edtPasswordConfirmation"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordConfirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:isPasswordConfirmation="true" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPasswordConfirmation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>